# icrc1-auction

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  canister_ids.json  dfx.json  mops.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.crypto-test.config.ts
.github/: pull_request_build.yml
.github/workflows/: pull_request_build.yml
crypto_canister/: Cargo.toml  crypto.did  lib.rs
did/: icrc1_auction.did
docker/: build.sh  mops.toml
frontend/: index.html  index.tsx  utils.ts
frontend-new/: .eslintrc.cjs  jest.config.ts  tsconfig.jest.json
frontend-new/src/: app.tsx  index.html  index.tsx  theme.ts
frontend/components/assets/: add-asset-modal.tsx  assets.tsx
frontend/components/connect-button/: connect-button.tsx
frontend/components/credits/: credits.tsx
frontend/components/dark-orders/: dark-orders.modal.tsx  dark-orders.tsx  index.ts
frontend/crypto/: vetkd.ts
frontend/crypto-test/: index.html
frontend/integration/: index.ts  index_legacy.ts  index_mock.ts  index_new.ts
src/: auction.mo  btc_handler.mo  call_stats.mo  ckbtc_address.mo  icrc1_auction.did  icrc1_auction_api.mo  icrc1_auction_api_legacy.mo  icrc1_auction_api_mock.mo  icrc1_auction_api_new.mo  icrc1_auction_api_next.mo  icrc84_auction.mo  utils.mo
src/auction/: README.md
src/utils/: permissions.mo  scheduler.mo
test/: icrc1_auction.test.ts  jest.config.ts  jest.setup.ts  jest.teardown.ts
test/mocks/: icrc1_ledger_mock.mo  mock_ckbtc_ledger_minter.mo
test/mocks/crypto_canister_mock/: Cargo.toml  crypto.did  lib.rs
(+73 files in other folders)
